--- a/socialize/src/app/post/post-create/post-create.component.html
+++ b/socialize/src/app/post/post-create/post-create.component.html
@@ -1,8 +1,15 @@
 <mat-card>
   <mat-form-field>
-    <textarea matInput rows="6" > </textarea>
+    <input matInput type="text" [(ngModel)]="title">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput type="text" [(ngModel)]="description">
+  </mat-form-field>
+  <mat-form-field>
+    <textarea matInput rows="6" [(ngModel)]="content"></textarea>
   </mat-form-field>
   <hr>
   <button mat-raised-button color="primary" (click)="onAddPost()">Save Post</button>
 </mat-card>
-<p>{{newPost}}</p>
+<br>
+
