--- a/socialize/src/app/post/post-list/post-list.component.html
+++ b/socialize/src/app/post/post-list/post-list.component.html
@@ -12,7 +12,7 @@
       <p>{{post.content}}</p>
       <mat-action-row>
         <button mat-raised-button color="primary">EDIT</button>
-        <button mat-raised-button color="warn">DELETE</button>
+        <button mat-raised-button color="warn" (click)="deletePost(post.id)">DELETE</button>
       </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
