--- a/socialize/src/app/material/header/header.component.html
+++ b/socialize/src/app/material/header/header.component.html
@@ -3,8 +3,9 @@
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Socialize</span>
-    <span class="example-spacer"></span>
+    <span class="home-logo" routerLink="/">Socialize</span>
+    <span class="spacer"></span>
+    <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">Create</a></li>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
