--- a/socialize/src/app/post/post-create/post-create.component.html
+++ b/socialize/src/app/post/post-create/post-create.component.html
@@ -1,21 +1,22 @@
 <mat-card>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onAddPost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field appearance="outline">
       <mat-label>Title</mat-label>
-      <input matInput type="text" name="title" ngModel required>
+      <input matInput type="text" name="title" [ngModel]="post.title" required>
       <mat-hint></mat-hint>
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Description</mat-label>
-      <input matInput type="text" name="description" ngModel>
+      <input matInput type="text" name="description" [ngModel]="post.description">
       <mat-hint></mat-hint>
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Content</mat-label>
-      <textarea matInput rows="6" name="content" ngModel required></textarea>
+      <textarea matInput rows="6" name="content" [ngModel]="post.content" required></textarea>
       <mat-hint></mat-hint>
     </mat-form-field>
-    <button mat-raised-button color="primary" type="submit">Save Post</button>
+    <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>
     <mat-error *ngIf="err">{{err}}</mat-error>
   </form>
 </mat-card>
