--- a/socialize/src/app/post/post-list/post-list.component.html
+++ b/socialize/src/app/post/post-list/post-list.component.html
@@ -1,6 +1,7 @@
-<ng-container *ngIf="posts.length >0">
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<ng-container *ngIf="posts.length >0 && !isLoading">
   <mat-accordion>
-    <mat-expansion-panel  *ngFor="let post of posts">
+    <mat-expansion-panel *ngFor="let post of posts">
       <mat-expansion-panel-header>
         <mat-panel-title>
           {{post.title}}
@@ -11,13 +12,13 @@
       </mat-expansion-panel-header>
       <p>{{post.content}}</p>
       <mat-action-row>
-        <button mat-raised-button color="primary">EDIT</button>
+        <a mat-raised-button color="primary" [routerLink] ="['/edit',post.id]">EDIT</a>
         <button mat-raised-button color="warn" (click)="deletePost(post.id)">DELETE</button>
       </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
 </ng-container>
 
-<ng-container *ngIf="posts.length <= 0">
+<ng-container *ngIf="posts.length <= 0 && !isLoading">
   <p class="null-message">No Post added</p>
 </ng-container>
