--- a/socialize/src/app/post/post-create/post-create.component.html
+++ b/socialize/src/app/post/post-create/post-create.component.html
@@ -1,24 +1,64 @@
+<!--Reactive Form -->
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="onAddPost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+  <form [formGroup]="form" (submit)="onAddPost()" *ngIf="! isLoading">
     <mat-form-field appearance="outline">
       <mat-label>Title</mat-label>
-      <input matInput type="text" name="title" [ngModel]="post.title" required>
+      <input matInput type="text" formControlName="title">
       <mat-hint></mat-hint>
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Description</mat-label>
-      <input matInput type="text" name="description" [ngModel]="post.description">
+      <input matInput type="text" formControlName="description">
       <mat-hint></mat-hint>
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Content</mat-label>
-      <textarea matInput rows="6" name="content" [ngModel]="post.content" required></textarea>
+      <textarea matInput rows="6" formControlName="content"></textarea>
       <mat-hint></mat-hint>
     </mat-form-field>
+    <div>
+      <button mat-button type="button" (click)="filePicker.click()">Select Image</button>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
+    </div>
+    <hr>
     <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>
+
     <mat-error *ngIf="err">{{err}}</mat-error>
   </form>
 </mat-card>
 <br>
+
+<!-- Simple Template Driven Form-->
+<!--<mat-card>-->
+<!--  <mat-spinner *ngIf="isLoading"></mat-spinner>-->
+<!--  <form (submit)="onAddPost(postForm)" #postForm="ngForm" *ngIf="! isLoading">-->
+<!--    <mat-form-field appearance="outline">-->
+<!--      <mat-label>Title</mat-label>-->
+<!--      <input matInput type="text" name="title" [ngModel]="post.title" required>-->
+<!--      <mat-hint></mat-hint>-->
+<!--    </mat-form-field>-->
+<!--    <mat-form-field appearance="outline">-->
+<!--      <mat-label>Description</mat-label>-->
+<!--      <input matInput type="text" name="description" [ngModel]="post.description">-->
+<!--      <mat-hint></mat-hint>-->
+<!--    </mat-form-field>-->
+<!--    <mat-form-field appearance="outline">-->
+<!--      <mat-label>Content</mat-label>-->
+<!--      <textarea matInput rows="6" name="content" [ngModel]="post.content" required></textarea>-->
+<!--      <mat-hint></mat-hint>-->
+<!--    </mat-form-field>-->
+<!--    <div>-->
+<!--      <button mat-button type="button" (click)="filePicker.click()">Select Image</button>-->
+<!--      <input type="file" #filePicker>-->
+<!--    </div>-->
+<!--    <hr>-->
+<!--    <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>-->
+
+<!--    <mat-error *ngIf="err">{{err}}</mat-error>-->
+<!--  </form>-->
+<!--</mat-card>-->
+<!--<br>-->
+
+
 
