--- a/socialize/src/app/post/post-create/post-create.component.html
+++ b/socialize/src/app/post/post-create/post-create.component.html
@@ -21,6 +21,9 @@
       <button mat-button type="button" (click)="filePicker.click()">Select Image</button>
       <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
+    <div class="image-preview" *ngIf="imagePreview && imagePreview !== ''">
+      <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
     <hr>
     <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>
 
