--- a/socialize/src/app/post/post-list/post-list.component.html
+++ b/socialize/src/app/post/post-list/post-list.component.html
@@ -10,14 +10,18 @@
           {{post.description}}
         </mat-panel-description>
       </mat-expansion-panel-header>
+     <div class="image-path">
+       <img [src]="post.imagePath" [alt]="post.imagePath">
+     </div>
       <p>{{post.content}}</p>
-      <img [src]="post.imagePath" [alt]="post.imagePath">
+
       <mat-action-row>
         <a mat-raised-button color="primary" [routerLink] ="['/edit',post.id]">EDIT</a>
         <button mat-raised-button color="warn" (click)="deletePost(post.id)">DELETE</button>
       </mat-action-row>
     </mat-expansion-panel>
   </mat-accordion>
+  <mat-paginator [length]="totalPost" [pageSize]="postPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangePage($event)"></mat-paginator>
 </ng-container>
 
 <ng-container *ngIf="posts.length <= 0 && !isLoading">
