--- a/socialize/src/app/post/post-list/post-list.component.scss
+++ b/socialize/src/app/post/post-list/post-list.component.scss
@@ -5,3 +5,13 @@
 mat-spinner{
   margin:auto
 }
+.image-path{
+  width: 100%;
+  img{
+    width: 20%;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.5);
+  }
+}
+mat-paginator{
+  margin: 1rem;
+}
