--- a/socialize/src/app/material/header/header.component.html
+++ b/socialize/src/app/material/header/header.component.html
@@ -6,6 +6,8 @@
     <span class="home-logo" routerLink="/">Socialize</span>
     <span class="spacer"></span>
     <li><a mat-button routerLink="/create" routerLinkActive="mat-accent">Create</a></li>
+    <li><a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a></li>
+    <li><a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a></li>
     <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
       <mat-icon>favorite</mat-icon>
     </button>
