--- a/socialize/src/app/auth/signup/signup.component.html
+++ b/socialize/src/app/auth/signup/signup.component.html
@@ -1,18 +1,18 @@
 <!--Reactive Form -->
 <mat-card>
   <mat-spinner *ngIf="isLoading"></mat-spinner>
-  <form (submit)="register()" *ngIf="! isLoading">
+  <form (submit)="signUp(signUpForm)" *ngIf="!isLoading" #signUpForm="ngForm">
     <mat-form-field appearance="outline">
       <mat-label>E-Mail</mat-label>
-      <input matInput type="email" placeholder="E-Mail Address">
+      <input matInput ngModel name="email" type="email" placeholder="E-Mail Address" #emailInput="ngModel" required email>
       <mat-hint></mat-hint>
-      <mat-error *ngIf="1==1">Please Enter a Valid Email</mat-error>
+      <mat-error *ngIf="emailInput.invalid">Please Enter a Valid Email</mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline">
       <mat-label>Password</mat-label>
-      <input matInput type="password" placeholder="Password">
+      <input matInput ngModel name="password" type="password" placeholder="Password" #passwordInput="ngModel" required>
       <mat-hint></mat-hint>
-      <mat-error *ngIf="1==1">Please Enter a Valid Password</mat-error>
+      <mat-error *ngIf="passwordInput.invalid">Please Enter a Valid Password</mat-error>
     </mat-form-field>
     <hr>
     <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>
