--- a/socialize/src/app/auth/signup/signup.component.html
+++ b/socialize/src/app/auth/signup/signup.component.html
@@ -15,7 +15,7 @@
       <mat-error *ngIf="passwordInput.invalid">Please Enter a Valid Password</mat-error>
     </mat-form-field>
     <hr>
-    <button mat-raised-button color="primary" type="submit">{{buttonText}}</button>
+    <button mat-raised-button color="primary" type="submit" *ngIf="!isLoading">{{buttonText}}</button>
   </form>
 </mat-card>
 <br>
