--- a/socialize/src/app/post/post-list/post-list.component.html
+++ b/socialize/src/app/post/post-list/post-list.component.html
@@ -15,7 +15,7 @@
      </div>
       <p>{{post.content}}</p>
 
-      <mat-action-row>
+      <mat-action-row *ngIf="userIsAuthenticated">
         <a mat-raised-button color="primary" [routerLink] ="['/edit',post.id]">EDIT</a>
         <button mat-raised-button color="warn" (click)="deletePost(post.id)">DELETE</button>
       </mat-action-row>
